# TIMP

./: .gitignore  CMakeLists.txt  README.md
DDZ/: OstTree.h  OstTree_main.cpp  OstTree_realize.cpp  OstTree_tests.cpp
task2_1/: task2-1.h  task2-1_test.cpp
task2_2/: task2-2.h  task2-2_main.cpp  task2-2_test.cpp
task2_3/: main.cpp  task2-3.cpp  task2-3.h  tests.cpp
task2_4/: in.txt  main.cpp  task2-4.h  tests.cpp
task2_5/: main.cpp  task2-5.cpp  task2-5.h  tests.cpp
task2_6/: main.cpp  task2-6.cpp  task2-6.h  tests.cpp
